--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.smithsnews</groupId>
 	<artifactId>actuator</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<packaging>jar</packaging>
 
 	<name>actuator</name>
@@ -22,6 +22,13 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<dockerfile-maven-version>1.3.7</dockerfile-maven-version>
+		<docker.registry>localhost:5000</docker.registry>
+		<docker.namespace>examples</docker.namespace>
+		<dockerfile.skip>true</dockerfile.skip>
+		<dockerfile.push.skip>true</dockerfile.push.skip>
 	</properties>
 
 	<dependencies>
@@ -47,6 +54,51 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-maven-plugin</artifactId>
+					<configuration>
+							<mainClass>com.smithsnews.actuator.ActuatorApplication</mainClass>
+							<layout>JAR</layout>
+					</configuration>
+					<executions>
+							<execution>
+									<goals>
+											<goal>repackage</goal>
+									</goals>
+							</execution>
+					</executions>
+			 </plugin>
+					 <plugin>
+							 <groupId>org.apache.maven.plugins</groupId>
+							 <artifactId>maven-compiler-plugin</artifactId>
+							 <version>3.7.0</version><!--$NO-MVN-MAN-VER$-->
+							 <configuration>
+									 <source>1.8</source>
+									 <target>1.8</target>
+							 </configuration>
+					 </plugin>
+					 <plugin>
+						 <groupId>com.spotify</groupId>
+						 <artifactId>dockerfile-maven-plugin</artifactId>
+						 <version>${dockerfile-maven-version}</version>
+						 <executions>
+							 <execution>
+								<phase>package</phase>
+								 <goals>
+									 <goal>build</goal>
+									 <goal>push</goal>
+								 </goals>
+							 </execution>
+						 </executions>
+						 <configuration>
+							 <repository>${docker.registry}/${docker.namespace}/${project.artifactId}</repository>
+							 <tag>${project.version}</tag>
+							 <buildArgs>
+								 <JAR_FILE>${project.artifactId}-${project.version}.jar</JAR_FILE>
+							 </buildArgs>
+						 </configuration>
+					 </plugin>
 		</plugins>
 	</build>
 
